# ipcz

./: .clang-format  .gclient-default  .gitignore  .gn  .vpython  .vpython3  BUILD.gn  DEPS  README.md
build_overrides/: build.gni  gtest.gni  ipcz.gni
include/ipcz/: ipcz.h
src/: BUILD.gn  api.cc
src/api/: api.cc  invalid_args_api_test.cc  node_api_test.cc  put_api_test.cc  query_status_api_test.cc
src/api/api_tests/: README.md  accept_remote_portal_api_test.cc  activate_monitor_api_test.cc  arm_trap_api_test.cc  begin_get_api_test.cc  begin_put_api_test.cc  close_portal_api_test.cc  connect_node_api_test.cc  create_monitor_api_test.cc  create_node_api_test.cc  create_trap_api_test.cc  destroy_monitor_api_test.cc  destroy_node_api_test.cc  destroy_trap_api_test.cc  end_get_api_test.cc  end_put_api_test.cc  get_api_test.cc  merge_portals_api_test.cc  open_portals_api_test.cc  open_remote_portal_api_test.cc  put_api_test.cc  query_portal_status_api_test.cc
src/api/integration_tests/: connect_test.cc  merge_portals_test.cc  node_test.cc  portal_transfer_test.cc  remote_portal_test.cc  trap_test.cc
src/api_tests/: arm_trap_api_test.cc  begin_get_api_test.cc  begin_put_api_test.cc  box_api_test.cc  close_api_test.cc  close_portal_api_test.cc  connect_node_api_test.cc  create_node_api_test.cc  create_trap_api_test.cc  destroy_node_api_test.cc  destroy_trap_api_test.cc  end_get_api_test.cc  end_put_api_test.cc  get_api_test.cc  merge_portals_api_test.cc  open_portals_api_test.cc  put_api_test.cc  query_portal_status_api_test.cc  trap_api_test.cc  unbox_api_test.cc
src/core/: block_allocator_pool.cc  block_allocator_pool.h  buffer_id.h  buffering_portal_backend.cc  buffering_portal_backend.h  decayable_link.cc  decayable_link.h  direct_portal_backend.cc  direct_portal_backend.h  direction.cc  direction.h  driver_memory.cc  driver_memory.h  driver_memory_mapping.cc  driver_memory_mapping.h  driver_transport.cc  driver_transport.h  fragment.cc  fragment.h  fragment_allocator.cc  fragment_allocator.h  fragment_descriptor.cc  fragment_descriptor.h  fragment_ref.cc  fragment_ref.h  incoming_parcel_queue.cc  incoming_parcel_queue.h  incoming_parcel_queue_test.cc  link_side.cc  link_side.h  link_type.cc  link_type.h  local_router_link.cc  local_router_link.h  mapped_node_link_address.cc  mapped_node_link_address.h  message.h  message_internal.cc  message_internal.h  monitor.cc  (+85 more)
src/core/message_macros/: message_data_declaration_macros.h  message_data_definition_macros.h  message_declaration_macros.h  message_definition_macros.h  message_dispatch_macros.h  message_handle_data_declaration_macros.h  message_handle_data_definition_macros.h  message_handle_declaration_macros.h  message_handle_definition_macros.h  message_params_declaration_macros.h  message_params_definition_macros.h  message_reply_dispatch_macros.h  undef_message_macros.h
src/debug/: hex_dump.cc  hex_dump.h  log.cc  log.h  stack_trace.cc  stack_trace.h
src/drivers/: multiprocess_reference_driver.cc  multiprocess_reference_driver.h  single_process_reference_driver.cc  single_process_reference_driver.h
src/integration_tests/: box_test.cc  connect_test.cc  merge_portals_test.cc  node_test.cc  portal_transfer_test.cc  remote_portal_test.cc  trap_test.cc
src/ipcz/: api_object.cc  api_object.h  block_allocator_pool.cc  block_allocator_pool.h  box.cc  box.h  buffer_id.h  driver_memory.cc  driver_memory.h  driver_memory_mapping.cc  driver_memory_mapping.h  driver_object.cc  driver_object.h  driver_transport.cc  driver_transport.h  fragment.cc  fragment.h  fragment_allocator.cc  fragment_allocator.h  fragment_descriptor.cc  fragment_descriptor.h  fragment_ref.cc  fragment_ref.h  handle_descriptor.h  link_side.h  link_type.h  local_router_link.cc  local_router_link.h  message_internal.cc  message_internal.h  node.cc  node.h  node_connector.cc  node_connector.h  node_link.cc  node_link.h  node_link_memory.cc  node_link_memory.h  node_message_defs.h  node_messages.cc  (+34 more)
src/ipcz/message_macros/: message_declaration_macros.h  message_definition_macros.h  message_dispatch_macros.h  message_params_declaration_macros.h  message_params_definition_macros.h  undef_message_macros.h
src/mem/: atomic_memcpy.cc  atomic_memcpy.h  block_allocator.cc  block_allocator.h  block_allocator_test.cc  mpmc_queue.h  mpmc_queue_test.cc  mpsc_queue.cc  mpsc_queue.h  mpsc_queue_test.cc  ref_counted.cc  ref_counted.h  ref_counted_test.cc  seqlocked_data.cc  seqlocked_data.h  spsc_queue.h  spsc_queue_test.cc
src/os/: channel.cc  channel.h  channel_test.cc  event.cc  event.h  event_test.cc  handle.cc  handle.h  memory.cc  memory.h  memory_test.cc  multiprocess_support_test.cc  multiprocess_test.cc  process.cc  process.h
src/reference_drivers/: README.md  blob.cc  blob.h  channel.cc  channel.h  channel_test.cc  event.cc  event.h  event_test.cc  handle_util.h  memory.cc  memory.h  memory_test.cc  multiprocess_reference_driver.cc  multiprocess_reference_driver.h  multiprocess_support_test.cc  object.cc  object.h  os_handle.cc  os_handle.h  os_process.cc  os_process.h  random.cc  single_process_reference_driver.cc  single_process_reference_driver.h  wrapped_os_handle.cc  wrapped_os_handle.h
src/standalone/: BUILD.gn  README.md
src/standalone/base/: logging.cc  logging.h
src/test/: api_test.cc  api_test.h  multinode_test.cc  multinode_test.h  multiprocess_test.cc  multiprocess_test.h  run_all_tests.cc  test_base.cc  test_base.h  test_client.cc  test_client.h
src/util/: README.md  block_allocator.cc  block_allocator.h  block_allocator_test.cc  function.h  handle_util.h  hex_dump.cc  hex_dump.h  log.h  mpsc_queue.cc  mpsc_queue.h  mpsc_queue_test.cc  mutex_locks.cc  mutex_locks.h  os_handle.cc  os_handle.h  os_process.cc  os_process.h  random.cc  random.h  ref_counted.cc  ref_counted.h  ref_counted_test.cc  safe_math.h  stack_trace.cc  stack_trace.h  two_mutex_lock.cc  two_mutex_lock.h
