# Copyright 2021 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/ipcz.gni")

assert(ipcz_build_standalone)

source_set("standalone") {
  public = [ "base/logging.h" ]
  sources = [ "base/logging.cc" ]
  public_deps = [ "//third_party/abseil-cpp:absl" ]
}
