# Copyright 2022 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/ipcz.gni")

assert(build_ipcz_standalone)

source_set("standalone") {
  public = [ "base/logging.h" ]
  sources = [ "base/logging.cc" ]
  public_deps = [ "//third_party/abseil-cpp:absl" ]
}
